# plasma-panel-spacer-extended

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  README.md  install-plasmoid-only.sh  install.sh  package-plasmoid.sh
.oldscripts/: install-plugin-only.sh
contents/ui/: main.qml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: ActionsModel.qml  ContextMenuModel.qml  GesturesArea.qml  QuickLaunch.qml  TasksModel.qml  Tooltip.qml  configActions.qml  configAppearance.qml  configBehavior.qml  configContextMenu.qml  configDebugging.qml  configGeneral.qml  main.qml
package/contents/ui/code/: utils.js
package/contents/ui/components/: FilterListView.qml  GroupedActions.qml  IconSelector.qml  MyComboBox.qml
package/contents/ui/tools/: focusTopWindow.js  get_shortcuts.sh  run_kwin_script.sh
plugin/: CMakeLists.txt
